--- a/problems/autocomplete/index.html
+++ b/problems/autocomplete/index.html
@@ -1,17 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Autocomplete Example</title>
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link type="text/css" href="./styles.css" rel="stylesheet" />
 </head>
+
 <body>
-    <div class="autocomplete-container">
-        <h2>Search Countries</h2>
-        <input type="text" id="autocomplete-input" placeholder="Type a country name">
-        <ul id="autocomplete-list"></ul>
-    </div>
-    <script type="module" src="app.js"></script>
+
+  <h1> Autocomplete Search </h1>
+  <section id="search-section">
+    <label for="search-input">Enter product name:</label>
+    <div class="search__input-options"></div>
+  </section>
+
+  <script type="module" src="./app.js"></script>
 </body>
+
 </html>
