--- a/tradingPlatform/index.html
+++ b/tradingPlatform/index.html
@@ -24,7 +24,7 @@
         </div>
     </section>
 
-    <!-- Buy Asset Form (Modal or Section) -->
+    <!-- Buy Asset Modal -->
     <div id="buy-modal" class="modal hidden">
         <div class="modal__content">
             <span class="modal__close" id="close-modal">&times;</span>
@@ -33,6 +33,19 @@
                 <label for="asset-quantity">Quantity:</label>
                 <input type="number" id="asset-quantity" name="asset-quantity" min="1" required>
                 <button type="submit">Buy</button>
+            </form>
+        </div>
+    </div>
+
+    <!-- Sell Asset Modal -->
+    <div id="sell-modal" class="modal hidden">
+        <div class="modal__content">
+            <span class="modal__close" id="close-sell-modal">&times;</span>
+            <h3>Sell Asset</h3>
+            <form id="sell-asset-form">
+                <label for="sell-quantity">Quantity:</label>
+                <input type="number" id="sell-quantity" name="sell-quantity" min="1" required>
+                <button type="submit">Sell</button>
             </form>
         </div>
     </div>
